fixed works from ccc, added flexwrap to panel divs

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 .panel {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 11px;
